# tddata

./: .gitignore  GEMINI.md  LICENSE  README.md  RETURNS.md  make_plots.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: run-tests.yml
docs/: CLI.md  PLOTS.md  RETURNS.md
src/tddata/: __init__.py  analytics.py  cli.py  constants.py  converter.py  downloader.py  plot.py  reader.py  storage.py
src/tesouro_direto_fetcher/: __init__.py  cli.py  downloader.py  plot.py  plugin.py  storage.py
tests/: test_analytics.py  test_analytics_returns.py  test_download_info.py  test_downloader.py  test_optional_dependencies.py  test_plot.py  test_reader.py  test_storage.py
