[project]
name = "tddata"
version = "2.1.0"
authors = [
  { name="Komesu, D.K.", email="daniel@dkko.me" },
]
description = "Easly download & read brazilian Tesouro Direto's data"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.28.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
]

[project.scripts]
tddata = "tddata.cli:main"

[tool.ruff]
line-length = 120
lint.select = ["I"]

[project.urls]
Homepage = "https://github.com/dankkom/tddata"
Issues = "https://github.com/dankkom/tddata/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
