[project]
name = "tesouro-direto-fetcher"
version = "2.1.1"
description = "Easly download & read brazilian Tesouro Direto's data"
readme = "README.md"
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "quantilica-core @ git+https://github.com/Quantilica/quantilica-core.git",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/Quantilica/tesouro-direto-fetcher"
Repository = "https://github.com/Quantilica/tesouro-direto-fetcher"
Issues = "https://github.com/Quantilica/tesouro-direto-fetcher/issues"

[project.scripts]
tesouro-direto-fetcher = "tesouro_direto_fetcher.cli:main"

[project.optional-dependencies]
analysis = [
    "altair[save]>=6.0.0",
    "polars>=1.38.1",
]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 79
lint.select = ["E", "F", "I", "UP", "B"]

[tool.uv.sources]
quantilica-core = { path = "../quantilica-core", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
